--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
-.App {
-  text-align: center;
+
+
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  background-color: #FBB130;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .App-header {
